--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "dev": "pnpm exec tsx ./esbuild.config.ts --outdir=./dist --watch"
     },
     "dependencies": {
+        "fast-xml-parser": "4.2.7",
         "tslib": "2.6.1"
     },
     "devDependencies": {
