--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "type": "module",
     "scripts": {
         "build": "rm -rf ./dist; pnpm exec tsx ./esbuild.config.ts --outdir=./dist",
-        "dev": "pnpm exec tsx ./esbuild.config.ts --outdir=./dist --watch"
+        "dev": "pnpm exec tsx ./esbuild.config.ts --outdir=./dist --watch",
+        "test": "cd ./test; node ./index.js"
     },
     "dependencies": {
         "fast-xml-parser": "4.2.7",
