--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
     "name": "bpmn2-parser",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "type": "module",
     "scripts": {
         "build": "rm -rf ./dist; pnpm exec tsx ./esbuild.config.ts --outdir=./dist",
-        "dev": "pnpm exec tsx ./esbuild.config.ts --outdir=./dist --watch",
-        "test": "cd ./test; node ./index.js"
+        "dev": "pnpm exec tsx ./esbuild.config.ts --outdir=./dist --watch"
     },
     "dependencies": {
         "fast-xml-parser": "4.2.7",
